HW6. Новые варианты не работающего RemoteDriver